amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/override-directive-extension-scalar.api.report
ModelId: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/override-directive-extension-scalar.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 1

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/core#unresolved-reference
  Message: Unresolved reference 'Date'
  Severity: Violation
  Target: null/nullwrapper/unresolved
  Property: 
  Range: [(6,10)-(6,10)]
  Location: file://amf-cli/shared/src/test/resources/graphql/tck/apis/invalid/override-directive-extension-scalar.api.graphql
